# harmony-lib

./: .gitignore  CMakeLists.txt  readme.md
docs/cpp-notebook/: 0) Contents.md  11) Frequency Class Design.md  14) Mentor session 23.10.2025.md  19)Mentor Session 06.11.2025.md  24) Set Container.md  25) Introduction to iterators.md  6) Mentor session 02.10.2025 notes.md  CPP-Apprentic-Note-Book.md  Effective C++.md  learnings.md  task1.md
docs/cpp-notebook/meeting_notes/: Mentor Session 25.11.2025.md  Mentorship log.md  Questions for Mentor session 20.11.2025.md
docs/cpp-notebook/mentorship_tasks/: index.md  mentorsession 25.11.md
docs/cpp-notebook/mentorship_tasks/Task1-value-type-experiment/: task1-value-type-experiment.md
docs/cpp-notebook/mentorship_tasks/Task2-implement-complex-type/: cppcon-back2basics-special-member-functions.md  mentorship-notes-class-design-ideas.md
docs/cpp-notebook/mentorship_tasks/task4-libharmony-foundation/: 1.Pitch Class Design.md  miscallaneous lessons.md
docs/cpp-notebook/tour_of_cpp/: 4. Error Handling.md  Contents.md
meeting-notes/: Mentor Session 06.11.2025.md  Mentor session 10.10.2025 notes.md  Mentor session 13.11.2025.md  Mentor session 30.10.2025.md  Questions for Mentor session 20.11.2025.md  meeting scribbles.md  meetings.md
mentorship-tasks/: Next Learning Topics.md  task2-takeaways.md  the topics so far.md
mentorship-tasks/Task2-implement-complex-type/: Notes from CPPCon - The special member functions.md  Semantics-of-the-Special-Member-Functions(SMFs).md  learnings-from-compiler-errors.md  mentorship-task2-minimal-complex-type.md
mentorship-tasks/task3-implement-string-smfs/: mentorship-task3-implementing-a-user-defined-string-type.md
mentorship-tasks/task4-libharmony-foundation/: Learnings from PR.md  discussion points for next meeting.md  taks-basics.md
mentorship-tasks/task5-playaround-with-ostream-class/: Miscallaneous - handle in c++.md  mentorship-task5- experimenting ostream class using bridge design pattern.md  ostream basics from meeting notes.md  task5-implementing a custom ostream class using bridge design pattern.md
mentorship-tasks/task5-voice-leading/: Mentorship Task5- Implementing Chord, ChordProgression, and generate_voicings().md
mentorship-tasks/task6- harmony-core-refactoring/: tasks todo.md
src/: chord.cpp  chord.hpp  complex.cpp  complex.hpp  example.cpp  example.hpp  frequency.cpp  harmony.hpp  jishnu.cpp  main.cpp  my_ostream.cpp  note.cpp  note_bit_set.hpp  note_set.cpp  note_set.hpp  pitch.cpp  progression.cpp  progression.hpp  string.cpp  string.hpp  voicer.hpp
test/: example.cpp  test_chord.cpp  test_frequency.cpp  test_note.cpp  test_note_set.cpp  test_pitch.cpp  test_progression.cpp  test_voicing.cpp
